# tabular-semantic-search-tutorial

./: .env.example  .gitignore  1_eda.ipynb  2_tabular_semantic_search_superlinked.ipynb  3_tabular_semantic_search_text_to_sql.ipynb  INSTALL_AND_USAGE.md  Makefile  README.md  amazon_search.ipynb  eda.ipynb  pyproject.toml
assets/: cosine_similarity_plot.html
product_search/: api.py  config.py  index.py  preprocessing.py  query.py
superlinked_app/: api.py  config.py  constants.py  data_processing.py  index.py  query.py  utils.py
tools/: create_consine_similarity_plot.py  create_mongodb_database.py  download_and_process_dataset.py  download_data.py  streamlit_app.py
