[project]
name = "product_search"
version = "0.1.0"
description = "Semantic search on top of Amazon products using Superlinked as vector compute."
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pydantic-settings>=2.6.1",
    "superlinked==17.1.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
